Add daily traffic page and video assets

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
               </div>
 
               <div role="listitem" class="project-item dynamic-item">
-                <div class="nav-button-block" data-video="placeholder-video.mp4">
+                <div class="nav-button-block" data-video="/assets/videos/SEO-traffic.mp4">
                   <div class="nav-button">SEO Optimization</div>
                   <div class="nav-button-year">2022</div>
                 </div>
