--- a/index.html
+++ b/index.html
@@ -78,28 +78,28 @@
 
               <div role="listitem" class="project-item dynamic-item">
                 <div class="nav-button-block" data-video="/assets/videos/SEO-traffic.mp4">
-                  <div class="nav-button">SEO Optimization</div>
+                  <div class="nav-button">SEO Traffic Boost</div>
                   <div class="nav-button-year">2022</div>
                 </div>
               </div>
 
               <div role="listitem" class="project-item dynamic-item">
                 <div class="nav-button-block" data-video="placeholder-video.mp4">
-                  <div class="nav-button">Interactions</div>
+                  <div class="nav-button">UI Interactions</div>
                   <div class="nav-button-year">2022</div>
                 </div>
               </div>
 
               <div role="listitem" class="project-item dynamic-item">
                 <div class="nav-button-block" data-video="placeholder-video.mp4">
-                  <div class="nav-button">Animations</div>
+                  <div class="nav-button">Animation Systems</div>
                   <div class="nav-button-year">2022</div>
                 </div>
               </div>
 
               <div role="listitem" class="project-item dynamic-item">
                 <div class="nav-button-block" data-video="placeholder-video.mp4">
-                  <div class="nav-button">Modular Elements</div>
+                  <div class="nav-button">Component Library</div>
                   <div class="nav-button-year">2022</div>
                 </div>
               </div>
