--- a/index.html
+++ b/index.html
@@ -106,8 +106,43 @@
 
               <div role="listitem" class="project-item dynamic-item">
                 <div class="nav-button-block" data-video="placeholder-video.mp4">
-                  <div class="nav-button">Functionality</div>
+                  <div class="nav-button">Error Handling</div>
                   <div class="nav-button-year">2019</div>
+                </div>
+              </div>
+
+              <div role="listitem" class="project-item dynamic-item">
+                <div class="nav-button-block" data-video="placeholder-video.mp4">
+                  <div class="nav-button">Performance Tuning</div>
+                  <div class="nav-button-year">2019</div>
+                </div>
+              </div>
+
+              <div role="listitem" class="project-item dynamic-item">
+                <div class="nav-button-block" data-video="placeholder-video.mp4">
+                  <div class="nav-button">Media Handling</div>
+                  <div class="nav-button-year">2019</div>
+                </div>
+              </div>
+
+              <div role="listitem" class="project-item dynamic-item">
+                <div class="nav-button-block" data-video="placeholder-video.mp4">
+                  <div class="nav-button">Theme Controls</div>
+                  <div class="nav-button-year">2018</div>
+                </div>
+              </div>
+
+              <div role="listitem" class="project-item dynamic-item">
+                <div class="nav-button-block" data-video="placeholder-video.mp4">
+                  <div class="nav-button">Color Framework</div>
+                  <div class="nav-button-year">2018</div>
+                </div>
+              </div>
+
+              <div role="listitem" class="project-item dynamic-item">
+                <div class="nav-button-block" data-video="placeholder-video.mp4">
+                  <div class="nav-button">Typography System</div>
+                  <div class="nav-button-year">2018</div>
                 </div>
               </div>
               
