Update about page

--- a/about/index.html
+++ b/about/index.html
@@ -82,9 +82,9 @@
               </div>
             <div class="hero-links secondary" style="flex-direction: column; align-items: flex-start; gap: 24px; margin-top: 32px;">
               <div style="line-height: 1.6;">
-                <p style="margin-bottom: 16px;"><strong><span style="color: #414140;">Hey, I'm Kadie. I don't just "build websites"—I engineer solutions for the web's </span><span class="gradient-link blue-green">inherent chaos</span>.</strong></p>
-                <p style="margin-bottom: 16px; color: #444444;">My focus isn't just on making things look "pretty"; it's on ensuring they are ruthlessly efficient and logically sound.</p>
-                <p style="margin-bottom: 16px; color: #444444;">I thrive in the sweet spot where abstract logic meets tangible creativity. There is a specific thrill in structuring code that is intellectually sound while delivering a UI that feels intuitive to the human brain.</p>
+                <p style="margin-bottom: 16px;"><strong><span style="color: #5f5f5f;">I focus on the space between things—the intentional silence and the precise structure—to create work that feels less like a product and more </span><span class="gradient-link blue-green">like an atmosphere</span>.</strong></p>
+                <p style="margin-bottom: 16px; color: #444444;">Most websites chase more—more features, more motion, more noise. I chase less: the clean line, the purposeful gesture, the interface that breathes.</p>
+                <p style="margin-bottom: 16px; color: #444444;">My work exists where the grid meets the gradient. It is a careful subtraction of the superfluous, revealing a poetic core that doesn’t need to be engineered, only allowed to appear.</p>
               </div>
               <div class="hero-links secondary" style="margin-top: 0;">
                 <a href="mailto:contact.kadie@gmail.com" class="gradient-link secondary">Email</a>
