Update about page

--- a/about/index.html
+++ b/about/index.html
@@ -86,6 +86,13 @@
                 <p style="margin-bottom: 16px; color: #444444;">Most websites chase more—more features, more motion, more noise. I chase less: the clean line, the purposeful gesture, the interface that breathes.</p>
                 <p style="margin-bottom: 16px; color: #444444;">My work exists where the grid meets the gradient. It is a careful subtraction of the superfluous, revealing a poetic core that doesn’t need to be engineered, only allowed to appear.</p>
               </div>
+
+              <div style="margin-top: 48px; padding-top: 12px; border-top: 1px solid #e8e8e8;">
+                <p style="font-size: 15px; color: #696969; font-style: italic; line-height: 1.7; max-width: 500px;">
+                  "Life, like architecture, is a verb. If designed well, it works. It's beautiful. And it needs no directions." - S.R., author of "Architecture is a Verb"
+                </p>
+              </div>
+
               <div class="hero-links secondary" style="margin-top: 0;">
                 <a href="mailto:contact.kadie@gmail.com" class="gradient-link secondary">Email</a>
                 <a href="https://www.linkedin.com/in/kadie-renner-bb80061a2?" target="_blank" class="gradient-link secondary">LinkedIn</a>
