--- a/ui-interactions/index.html
+++ b/ui-interactions/index.html
@@ -1093,6 +1093,11 @@
       padding: 20px;
       margin-bottom: 25px;
       border: 2px solid #e0e0e0;
+      position: sticky;
+      top: 10px;
+      z-index: 5;
+      max-height: 220px; /* reduce visual footprint */
+      overflow-y: auto;
     }
 
     .preview-section-title {
@@ -1108,6 +1113,9 @@
     .customizer-preview-container {
       background: white;
       border: 2px dashed #ccc;
+      transform: scale(0.69);
+      transform-origin: top left;
+      width: 145%; /* compensate so scaled width equals parent */
       border-radius: 10px;
       padding: 20px;
       min-height: 200px;
@@ -3348,6 +3356,19 @@
         font-size: 2rem;
       }
     }
+    /* Font dropdown styles */
+    .font-dropdown { position: relative; display: inline-block; }
+    .font-dropdown-trigger { padding: 6px 10px; cursor: pointer; border: 1px solid #ccc; background: #fff; font: inherit; }
+    .font-dropdown-list { position: static; z-index: 10; left: 0; right: 0; max-height: 12rem; overflow-y: auto; list-style: none; margin: 0; padding: 0; border: 1px solid #ccc; background: #fff; scrollbar-width: none; -ms-overflow-style: none; }
+    .font-dropdown-list::-webkit-scrollbar { display: none; }
+    .font-dropdown-list li { padding: 6px 10px; cursor: pointer; color: #333; }
+    .font-dropdown-list li:hover { color: #888; }
+
+    /* Dropdown alignment fixes */
+    .font-dropdown { display: block; width: 100%; }
+    .font-dropdown-trigger { width: 100%; text-align: left; }
+    .font-dropdown-list { top: 100%; margin-top: 4px; }
+
   </style>
 </head>
 
@@ -3400,9 +3421,6 @@
       <div class="customizer-body" id="customizerBody">
         <!-- Live Preview Section -->
         <div class="customizer-preview-section">
-          <h3 class="preview-section-title">
-            <span>👁️</span> Live Preview
-          </h3>
           <div class="customizer-preview-container" id="customizerPreview">
             <div class="preview-placeholder">
               Select an element to see live preview
@@ -5184,6 +5202,57 @@
     }
 
     // Attach event listeners to controls
+    // Convert native font <select> to custom dropdowns with hover preview
+    function transformFontSelect(select) {
+      if (select.dataset.transformed) return; // avoid duplicating
+      select.dataset.transformed = 'true';
+      // Hide original select
+      select.style.display = 'none';
+
+      // Wrapper & trigger
+      const wrapper = document.createElement('div');
+      wrapper.className = 'font-dropdown';
+
+      const trigger = document.createElement('button');
+      trigger.className = 'font-dropdown-trigger';
+      trigger.type = 'button';
+      trigger.textContent = select.options[select.selectedIndex]?.textContent || 'Choose Font';
+
+      // Option list
+      const list = document.createElement('ul');
+      list.className = 'font-dropdown-list hidden';
+
+      Array.from(select.options).forEach(opt => {
+        const li = document.createElement('li');
+        li.textContent = opt.textContent;
+        li.dataset.value = opt.value;
+
+        // Hover = live preview
+        li.addEventListener('pointerover', () => {
+          trigger.textContent = li.textContent;
+          select.value = li.dataset.value;
+          applyCustomization(select.dataset.property, li.dataset.value, select.dataset.selector, select.dataset.cssProperty);
+        });
+
+        // Click = commit & close
+        li.addEventListener('click', () => {
+          list.classList.add('hidden');
+        });
+
+        list.appendChild(li);
+      });
+
+      // Toggle list visibility
+      trigger.addEventListener('click', () => {
+        list.classList.toggle('hidden');
+      });
+
+      wrapper.appendChild(trigger);
+      wrapper.appendChild(list);
+
+      select.parentNode.insertBefore(wrapper, select);
+    }
+
     function attachControlListeners() {
       // Font selects
       document.querySelectorAll('.font-select').forEach(select => {
@@ -5192,22 +5261,8 @@
           applyCustomization(e.target.dataset.property, e.target.value, e.target.dataset.selector, e.target.dataset.cssProperty);
         });
 
-        // Preview font on hover (temporary)
-        select.addEventListener('mouseenter', function() {
-          const options = this.querySelectorAll('option');
-          
-          options.forEach(option => {
-            option.addEventListener('mouseover', (e) => {
-              const fontValue = e.target.value;
-              const property = this.dataset.property;
-              
-              // Temporarily apply the hovered font to preview
-              if (property.startsWith('--')) {
-                document.documentElement.style.setProperty(property, fontValue);
-              }
-            });
-          });
-        });
+        // Transform into custom dropdown with live hover preview
+        transformFontSelect(select);
       });
 
       // Color controls
