Organize Bento page into square and wide groups, remove 3-per-row limit

--- a/bento-box/index.html
+++ b/bento-box/index.html
@@ -3,8 +3,6 @@
 <head>
   <meta charset="UTF-8">
   <title>Bento Box Showcase - Kadie Dev</title>
-
-  <!-- Responsive viewport -->
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <!-- Global styles -->
@@ -16,142 +14,48 @@
   <!-- Bento specific -->
   <link rel="stylesheet" href="../assets/css/bento.css" />
 
-  <!-- Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&display=swap" rel="stylesheet">
 </head>
 <body>
   <div class="home-section">
-    <!-- Back link -->
     <div style="padding: 24px;">
       <a href="../index.html" class="gradient-link secondary">← Back to Home</a>
     </div>
 
-    <!-- Bento Grid -->
+    <!-- ===================== 1:1 SQUARE SET ===================== -->
+    <h2 style="text-align:center;font-family:var(--font-heading);margin:32px 0 8px;">Square 1:1 Bento Boxes</h2>
     <section class="bento-grid">
-      <!-- Pattern 1 card -->
-      <article class="bento-card">
-        <div class="bento-inner pattern-1">
-          <div class="bento-cell bc1">1-A</div>
-          <div class="bento-cell bc2">1-B</div>
-          <div class="bento-cell bc3">1-C</div>
-          <div class="bento-cell bc4">1-D</div>
-        </div>
-      </article>
-
-      <!-- Pattern 2 card -->
-      <article class="bento-card">
-        <div class="bento-inner pattern-2">
-          <div class="bento-cell bc5">Hero</div>
-          <div class="bento-cell bc6">Info</div>
-          <div class="bento-cell bc1">Action</div>
-        </div>
-      </article>
-
-      <!-- Pattern 3 card -->
-      <article class="bento-card">
-        <div class="bento-inner pattern-3">
-          <div class="bento-cell bc2">Banner</div>
-          <div class="bento-cell bc7">Gallery</div>
-          <div class="bento-cell bc3">Meta</div>
-          <div class="bento-cell bc4">Stat</div>
-        </div>
-      </article>
-
-      <!-- Pattern 4 card -->
-      <article class="bento-card">
-        <div class="bento-inner pattern-4">
-          <div class="bento-cell bc8">Header</div>
-          <div class="bento-cell bc9">Left</div>
-          <div class="bento-cell bc10">Right</div>
-        </div>
-      </article>
-
-      <!-- Pattern 5 card -->
-      <article class="bento-card">
-        <div class="bento-inner pattern-5">
-          <div class="bento-cell bc1">Center</div>
-          <div class="bento-cell bc2">Top</div>
-          <div class="bento-cell bc3">Left</div>
-          <div class="bento-cell bc4">Right</div>
-          <div class="bento-cell bc5">Bottom</div>
-        </div>
-      </article>
-
-      <!-- Pattern 6 card -->
-      <article class="bento-card">
-        <div class="bento-inner pattern-6">
-          <div class="bento-cell bc6">A</div>
-          <div class="bento-cell bc7">B</div>
-          <div class="bento-cell bc8">Footer</div>
-        </div>
-      </article>
-
-      <!-- Pattern 7 card -->
-      <article class="bento-card">
-        <div class="bento-inner pattern-7">
-          <div class="bento-cell bc9">Primary</div>
-          <div class="bento-cell bc4">1</div>
-          <div class="bento-cell bc3">2</div>
-          <div class="bento-cell bc2">3</div>
-          <div class="bento-cell bc1">4</div>
-        </div>
-      </article>
-
-      <!-- Pattern 8 card -->
-      <article class="bento-card">
-        <div class="bento-inner pattern-8">
-          <div class="bento-cell bc5">Top-Left</div>
-          <div class="bento-cell bc6">Top-Right</div>
-          <div class="bento-cell bc7">Mid-Left</div>
-          <div class="bento-cell bc8">Feature</div>
-          <div class="bento-cell bc9">Bottom-Left</div>
-        </div>
-      </article>
-
-      <!-- Pattern 9 card -->
-      <article class="bento-card">
-        <div class="bento-inner pattern-9">
-          <div class="bento-cell bc2">Side</div>
-          <div class="bento-cell bc3">Main</div>
-          <div class="bento-cell bc4">Side-Bottom</div>
-        </div>
-      </article>
-
-      <!-- Pattern 10 card -->
-      <article class="bento-card">
-        <div class="bento-inner pattern-10">
-          <div class="bento-cell bc1">Header</div>
-          <div class="bento-cell bc2">A</div>
-          <div class="bento-cell bc3">B</div>
-          <div class="bento-cell bc4">Footer</div>
-        </div>
-      </article>
-
-      <!-- Pattern 11 card -->
-      <article class="bento-card">
-        <div class="bento-inner pattern-11">
-          <!-- 16 cells for checkerboard -->
-          <div class="bento-cell"></div><div class="bento-cell"></div><div class="bento-cell"></div><div class="bento-cell"></div>
-          <div class="bento-cell"></div><div class="bento-cell"></div><div class="bento-cell"></div><div class="bento-cell"></div>
-          <div class="bento-cell"></div><div class="bento-cell"></div><div class="bento-cell"></div><div class="bento-cell"></div>
-          <div class="bento-cell"></div><div class="bento-cell"></div><div class="bento-cell"></div><div class="bento-cell"></div>
-        </div>
-      </article>
-
-      <!-- Pattern 12 card -->
-      <article class="bento-card">
-        <div class="bento-inner pattern-12">
-          <div class="bento-cell bc6">Banner</div>
-          <div class="bento-cell bc7">Highlight</div>
-          <div class="bento-cell bc8">Detail</div>
-          <div class="bento-cell bc9">Meta</div>
-        </div>
-      </article>
+      <!-- 9 square cards (3 rows) -->
+      <article class="bento-card"><div class="bento-inner pattern-1"><div class="bento-cell bc1">1-A</div><div class="bento-cell bc2">1-B</div><div class="bento-cell bc3">1-C</div><div class="bento-cell bc4">1-D</div></div></article>
+      <article class="bento-card"><div class="bento-inner pattern-2"><div class="bento-cell bc5">Hero</div><div class="bento-cell bc6">Info</div><div class="bento-cell bc1">Action</div></div></article>
+      <article class="bento-card"><div class="bento-inner pattern-3"><div class="bento-cell bc2">Banner</div><div class="bento-cell bc7">Gallery</div><div class="bento-cell bc3">Meta</div><div class="bento-cell bc4">Stat</div></div></article>
+      <article class="bento-card"><div class="bento-inner pattern-4"><div class="bento-cell bc8">Header</div><div class="bento-cell bc9">Left</div><div class="bento-cell bc10">Right</div></div></article>
+      <article class="bento-card"><div class="bento-inner pattern-5"><div class="bento-cell bc1">Center</div><div class="bento-cell bc2">Top</div><div class="bento-cell bc3">Left</div><div class="bento-cell bc4">Right</div><div class="bento-cell bc5">Bottom</div></div></article>
+      <article class="bento-card"><div class="bento-inner pattern-6"><div class="bento-cell bc6">A</div><div class="bento-cell bc7">B</div><div class="bento-cell bc8">Footer</div></div></article>
+      <article class="bento-card"><div class="bento-inner pattern-7"><div class="bento-cell bc9">Primary</div><div class="bento-cell bc4">1</div><div class="bento-cell bc3">2</div><div class="bento-cell bc2">3</div><div class="bento-cell bc1">4</div></div></article>
+      <article class="bento-card"><div class="bento-inner pattern-8"><div class="bento-cell bc5">Top-Left</div><div class="bento-cell bc6">Top-Right</div><div class="bento-cell bc7">Mid-Left</div><div class="bento-cell bc8">Feature</div><div class="bento-cell bc9">Bottom-Left</div></div></article>
+      <article class="bento-card"><div class="bento-inner pattern-9"><div class="bento-cell bc2">Side</div><div class="bento-cell bc3">Main</div><div class="bento-cell bc4">Side-Bottom</div></div></article>
     </section>
 
-    <div class="last-updated" style="text-align:center; margin-bottom: 48px;">Jan '26</div>
+    <!-- ===================== 16:9 WIDE SET ===================== -->
+    <h2 style="text-align:center;font-family:var(--font-heading);margin:48px 0 8px;">Wide 16:9 Bento Boxes</h2>
+    <section class="bento-grid">
+      <!-- 9 wide cards (duplicate patterns) -->
+      <article class="bento-card wide"><div class="bento-inner pattern-10"><div class="bento-cell bc1">Header</div><div class="bento-cell bc2">A</div><div class="bento-cell bc3">B</div><div class="bento-cell bc4">Footer</div></div></article>
+      <article class="bento-card wide"><div class="bento-inner pattern-11"><div class="bento-cell"></div><div class="bento-cell"></div><div class="bento-cell"></div><div class="bento-cell"></div><div class="bento-cell"></div><div class="bento-cell"></div><div class="bento-cell"></div><div class="bento-cell"></div><div class="bento-cell"></div><div class="bento-cell"></div><div class="bento-cell"></div><div class="bento-cell"></div><div class="bento-cell"></div><div class="bento-cell"></div><div class="bento-cell"></div><div class="bento-cell"></div></div></article>
+      <article class="bento-card wide"><div class="bento-inner pattern-12"><div class="bento-cell bc6">Banner</div><div class="bento-cell bc7">Highlight</div><div class="bento-cell bc8">Detail</div><div class="bento-cell bc9">Meta</div></div></article>
+      <!-- Duplicate a few interesting square patterns but wide aspect -->
+      <article class="bento-card wide"><div class="bento-inner pattern-1"><div class="bento-cell bc1">1-A</div><div class="bento-cell bc2">1-B</div><div class="bento-cell bc3">1-C</div><div class="bento-cell bc4">1-D</div></div></article>
+      <article class="bento-card wide"><div class="bento-inner pattern-3"><div class="bento-cell bc2">Banner</div><div class="bento-cell bc7">Gallery</div><div class="bento-cell bc3">Meta</div><div class="bento-cell bc4">Stat</div></div></article>
+      <article class="bento-card wide"><div class="bento-inner pattern-5"><div class="bento-cell bc1">Center</div><div class="bento-cell bc2">Top</div><div class="bento-cell bc3">Left</div><div class="bento-cell bc4">Right</div><div class="bento-cell bc5">Bottom</div></div></article>
+      <article class="bento-card wide"><div class="bento-inner pattern-2"><div class="bento-cell bc5">Hero</div><div class="bento-cell bc6">Info</div><div class="bento-cell bc1">Action</div></div></article>
+      <article class="bento-card wide"><div class="bento-inner pattern-6"><div class="bento-cell bc6">A</div><div class="bento-cell bc7">B</div><div class="bento-cell bc8">Footer</div></div></article>
+      <article class="bento-card wide"><div class="bento-inner pattern-8"><div class="bento-cell bc5">Top-Left</div><div class="bento-cell bc6">Top-Right</div><div class="bento-cell bc7">Mid-Left</div><div class="bento-cell bc8">Feature</div><div class="bento-cell bc9">Bottom-Left</div></div></article>
+    </section>
+
+    <div class="last-updated" style="text-align:center; margin:64px 0 48px;">Jan '26</div>
   </div>
 </body>
 </html>
