Add tall 9:16 Bento section with six cards

--- a/bento-box/index.html
+++ b/bento-box/index.html
@@ -55,7 +55,19 @@
       <article class="bento-card wide"><div class="bento-inner pattern-8"><div class="bento-cell bc5">Top-Left</div><div class="bento-cell bc6">Top-Right</div><div class="bento-cell bc7">Mid-Left</div><div class="bento-cell bc8">Feature</div><div class="bento-cell bc9">Bottom-Left</div></div></article>
     </section>
 
-    <div class="last-updated" style="text-align:center; margin:64px 0 48px;">Jan '26</div>
+    <!-- ===================== 9:16 TALL SET ===================== -->
+    <h2 style="text-align:center;font-family:var(--font-heading);margin:48px 0 8px;">Tall 9:16 Bento Boxes</h2>
+    <section class="bento-grid">
+      <!-- 6 tall cards -->
+      <article class="bento-card tall"><div class="bento-inner pattern-4"><div class="bento-cell bc1">Header</div><div class="bento-cell bc2">Content</div><div class="bento-cell bc3">Footer</div></div></article>
+      <article class="bento-card tall"><div class="bento-inner pattern-2"><div class="bento-cell bc4">Image</div><div class="bento-cell bc5">Text</div><div class="bento-cell bc6">CTA</div></div></article>
+      <article class="bento-card tall"><div class="bento-inner pattern-5"><div class="bento-cell bc7">Top</div><div class="bento-cell bc8">Focus</div><div class="bento-cell bc9">Bottom</div><div class="bento-cell bc10">More</div><div class="bento-cell bc1">Extra</div></div></article>
+      <article class="bento-card tall"><div class="bento-inner pattern-1"><div class="bento-cell bc2">A</div><div class="bento-cell bc3">B</div><div class="bento-cell bc4">C</div><div class="bento-cell bc5">D</div></div></article>
+      <article class="bento-card tall"><div class="bento-inner pattern-6"><div class="bento-cell bc6">Hero</div><div class="bento-cell bc7">Sub</div><div class="bento-cell bc8">Footer</div></div></article>
+      <article class="bento-card tall"><div class="bento-inner pattern-3"><div class="bento-cell bc9">Banner</div><div class="bento-cell bc2">Info</div><div class="bento-cell bc3">Meta</div><div class="bento-cell bc4">Stats</div></div></article>
+    </section>
+
+    <div class="last-updated"" style="text-align:center; margin:64px 0 48px;">Jan '26</div>
   </div>
 </body>
 </html>
