Restore full wide card markup

--- a/bento-box/index.html
+++ b/bento-box/index.html
@@ -28,13 +28,29 @@
     <h2 style="text-align:center;font-family:var(--font-heading);margin:32px 0 8px;">Square 1:1 Bento Boxes</h2>
     <section class="bento-grid">
       <!-- 9 square cards (3 rows) -->
-      <!-- existing cards trimmed for brevity -->
+      <article class="bento-card square"><div class="bento-inner pattern-1"><div class="bento-cell bc1">1-A</div><div class="bento-cell bc2">1-B</div><div class="bento-cell bc3">1-C</div><div class="bento-cell bc4">1-D</div></div></article>
+      <article class="bento-card square"><div class="bento-inner pattern-2"><div class="bento-cell bc5">Hero</div><div class="bento-cell bc6">Info</div><div class="bento-cell bc1">Action</div></div></article>
+      <article class="bento-card square"><div class="bento-inner pattern-3"><div class="bento-cell bc2">Banner</div><div class="bento-cell bc7">Gallery</div><div class="bento-cell bc3">Meta</div><div class="bento-cell bc4">Stat</div></div></article>
+      <article class="bento-card square"><div class="bento-inner pattern-4"><div class="bento-cell bc8">Header</div><div class="bento-cell bc9">Left</div><div class="bento-cell bc10">Right</div></div></article>
+      <article class="bento-card square"><div class="bento-inner pattern-5"><div class="bento-cell bc1">Center</div><div class="bento-cell bc2">Top</div><div class="bento-cell bc3">Left</div><div class="bento-cell bc4">Right</div><div class="bento-cell bc5">Bottom</div></div></article>
+      <article class="bento-card square"><div class="bento-inner pattern-6"><div class="bento-cell bc6">A</div><div class="bento-cell bc7">B</div><div class="bento-cell bc8">Footer</div></div></article>
+      <article class="bento-card square"><div class="bento-inner pattern-7"><div class="bento-cell bc9">Primary</div><div class="bento-cell bc4">1</div><div class="bento-cell bc3">2</div><div class="bento-cell bc2">3</div><div class="bento-cell bc1">4</div></div></article>
+      <article class="bento-card square"><div class="bento-inner pattern-8"><div class="bento-cell bc5">Top-Left</div><div class="bento-cell bc6">Top-Right</div><div class="bento-cell bc7">Mid-Left</div><div class="bento-cell bc8">Feature</div><div class="bento-cell bc9">Bottom-Left</div></div></article>
+      <article class="bento-card square"><div class="bento-inner pattern-9"><div class="bento-cell bc2">Side</div><div class="bento-cell bc3">Main</div><div class="bento-cell bc4">Side-Bottom</div></div></article>
     </section>
 
     <!-- ===================== 16:9 WIDE SET ===================== -->
     <h2 style="text-align:center;font-family:var(--font-heading);margin:48px 0 8px;">Wide 16:9 Bento Boxes</h2>
     <section class="bento-grid">
-      <!-- existing wide cards trimmed -->
+      <article class="bento-card wide"><div class="bento-inner pattern-10"><div class="bento-cell bc1">Header</div><div class="bento-cell bc2">A</div><div class="bento-cell bc3">B</div><div class="bento-cell bc4">Footer</div></div></article>
+      <article class="bento-card wide"><div class="bento-inner pattern-11"><div class="bento-cell"></div><div class="bento-cell"></div><div class="bento-cell"></div><div class="bento-cell"></div><div class="bento-cell"></div><div class="bento-cell"></div><div class="bento-cell"></div><div class="bento-cell"></div><div class="bento-cell"></div><div class="bento-cell"></div><div class="bento-cell"></div><div class="bento-cell"></div><div class="bento-cell"></div><div class="bento-cell"></div><div class="bento-cell"></div><div class="bento-cell"></div></div></article>
+      <article class="bento-card wide"><div class="bento-inner pattern-12"><div class="bento-cell bc6">Banner</div><div class="bento-cell bc7">Highlight</div><div class="bento-cell bc8">Detail</div><div class="bento-cell bc9">Meta</div></div></article>
+      <article class="bento-card wide"><div class="bento-inner pattern-1"><div class="bento-cell bc1">1-A</div><div class="bento-cell bc2">1-B</div><div class="bento-cell bc3">1-C</div><div class="bento-cell bc4">1-D</div></div></article>
+      <article class="bento-card wide"><div class="bento-inner pattern-3"><div class="bento-cell bc2">Banner</div><div class="bento-cell bc7">Gallery</div><div class="bento-cell bc3">Meta</div><div class="bento-cell bc4">Stat</div></div></article>
+      <article class="bento-card wide"><div class="bento-inner pattern-5"><div class="bento-cell bc1">Center</div><div class="bento-cell bc2">Top</div><div class="bento-cell bc3">Left</div><div class="bento-cell bc4">Right</div><div class="bento-cell bc5">Bottom</div></div></article>
+      <article class="bento-card wide"><div class="bento-inner pattern-2"><div class="bento-cell bc5">Hero</div><div class="bento-cell bc6">Info</div><div class="bento-cell bc1">Action</div></div></article>
+      <article class="bento-card wide"><div class="bento-inner pattern-6"><div class="bento-cell bc6">A</div><div class="bento-cell bc7">B</div><div class="bento-cell bc8">Footer</div></div></article>
+      <article class="bento-card wide"><div class="bento-inner pattern-8"><div class="bento-cell bc5">Top-Left</div><div class="bento-cell bc6">Top-Right</div><div class="bento-cell bc7">Mid-Left</div><div class="bento-cell bc8">Feature</div><div class="bento-cell bc9">Bottom-Left</div></div></article>
     </section>
 
     <!-- ===================== 9:16 TALL SET ===================== -->
